feat: add GetUserByID to SwaggerDoc
